manifestos-k8s/targeting-service/deploy-targeting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: targeting-service
        image: docker.io/targeting-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8003
