manifestos-k8s/targeting-service/svc-targeting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service-svc
  namespace: targeting-service
spec:
  selector:
    app: targeting-service
  ports:
  - name: http
    port: 8003
    targetPort: 8003
