manifestos-k8s/targeting-service/ingress-targeting-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-service-ing
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: targeting-service-svc
              port:
                number: 80
